--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 	<h1>Welcome to the Sample App!</h1>
 	<h2>
 		This is Andrews sample app page
-		<a href="http://www.railstutorial.org/">Ruby on rails Tutorial</a>
+		<a href="http://www.npr.org/">NPR</a>
 		sample application.
 	</h2>
 </div>
