--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,9 @@
 <footer class = 'footer'>
-	<small>
-		Andrew's <a href="http://www.rembrandtbuilders.com"> family's company</a> Website.
-		This one is by Andrew himself.
-	</small>
 	<nav>
-		<ul>
-			<li><%= link_to "About", pages_about_path %></li>
-			<li><%= link_to "Contact", pages_contact_path %></li>
-			<li><a href="http://npr.org">News</a></li>
+		<ul class = "nav navbar-nav navbar-center">
+			<li><%= link_to "Blog", main_app.monologue_path %></li>
+			<li><%= link_to "About", main_app.pages_about_path %></li>
+			<li><%= link_to "Contact", main_app.pages_contact_path %></li>
 		</ul>
 	</nav>
 </footer>
