--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,25 +2,9 @@
 	<div class = "container">
 		<nav>
 			<ul class = "nav navbar-nav navbar-right">
-				<li><%= link_to 'Home', root_path %></li>
-				<li><%= link_to 'Research', pages_research_path %></li>
-				
-					<li><%= link_to "Blog", monologue_path %></li>
-					<li class="dropdown">
-			            <a href="#" class="dropdown-toggle" data-toggle="dropdown" > 
-			            	Account 
-			            	<b class="caret"></b>
-			            </a>
-			            <ul class="dropdown-menu">
-			            	<li><%= link_to "About", pages_about_path %></li>
-			            	<li><%= link_to "Settings", "#" %></li>
-			            	<li class='divider'></li>
-			            	
-			            </ul>
-			        </li>
-			    
-					<li><%= link_to 'Login', '#' %></li>
-				
+				<li><%= link_to "About", main_app.pages_about_path %></li>
+            	<li><%= link_to "Contact", main_app.pages_contact_path %></li>
+				<li><%= link_to "Blog", main_app.monologue_path %></li>
 			</ul>
 		</nav>
 	</div>
