Took out @import bootstrap-sockets b/c precompile rejected it

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,4 +1,3 @@
-@import "bootstrap-sprockets";
 @import "bootstrap";
 
 /* mixins, variables, etc. */
@@ -49,7 +48,7 @@ h2 {
 	margin-bottom: 30px;
 	text-align: center;
 	font-weight: normal;
-	color: $gray-light;
+	color: black;
 }
 
 p {
@@ -159,12 +158,6 @@ input {
   }
 }
 
-.field_with_errors {
-  @extend .has-error;
-  .form-control {
-    color: $state-danger-text;
-  }
-}
 
 .checkbox {
 	margin-top: -10px;
@@ -198,42 +191,11 @@ input {
 	li {
 		overflow: auto;
 		padding: 10px 0;
-		border-bottom: 1px solid $gray-lighter;
+		border-bottom: 1px solid gray;
 	}
 }
 
-/* Microposts */
 
-.microposts {
-	list-style: none;
-	padding: 0;
-	li {
-		padding: 10px 0;
-		border-top: 1px solid #e8e8e8;
-	}
-	.user {
-		margin-top: 5em;
-		padding-top: 0;
-	}
-	.content{
-		display: block;
-		margin-left: 60px;
-		img{
-			display: block;
-			padding: 5px 0;
-		}
-	}
-	.timestamp{
-		color: $gray-lighter;
-		display: block;
-		margin-left: 60px;
-	}
-	.gravatar {
-		float: left;
-		margin-right: 10px;
-		margin-top: 5px;
-	}
-}
 
 aside{
 	textarea {
