integrated new bootstrap theme

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,30 @@
-<header class = "navbar navbar-fixed-top navbar-inverse">
-	<div class = "container">
-		<nav>
-			<ul class = "nav navbar-nav navbar-right">
-				<li><%= link_to "About", main_app.pages_about_path %></li>
-            	<li><%= link_to "Contact", main_app.pages_contact_path %></li>
-				<li><%= link_to "Blog", main_app.monologue_path %></li>
-			</ul>
-		</nav>
-	</div>
-</header>
+<div class="brand">Fred Graham-Yooll</div>
+    <div class="address-bar">Derwood, MD | 240.731.4803</div>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+                <a class="navbar-brand" href="index.html">Business Casual</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                	<li><%= link_to "Home", main_app.root_path %></li>
+                    <li><%= link_to "Blog", main_app.monologue_path %></li>
+					<li><%= link_to "About", main_app.pages_about_path %></li>
+					<li><%= link_to "Contact", main_app.pages_contact_path %></li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
