--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,71 @@
 <!DOCTYPE html>
 <% provide(:title, "About") %>
-<h1>About</h1>
-<p>This is a sample_app created by Andrew Graham-Yooll. This is his favorite new outlet: 
-	<a href="http://www.npr.org">NPR</a>
+<!-- <h1>About</h1>
+<div class=".col-md-7">
+<p>Fred was born in 1932 in the City of Edinburgh, Scotland.  Educated at Edinburgh Academy and Clifton Hall Prep Schools and later at Fettes College, he went on study at Nottingham University where he obtained a Bsc. in Agriculture.  After graduating he obtained his commission in the Royal Artillery.  Immigrating to Canada, Fred joined NW Nitro Chemicals and was transferred to the USA, but not before meeting his future wife, Joyce Briercliffe, in Winnipeg, Manitoba.  Soon after, he joined Imperial Oil in Toronto and was quickly moved back to join the USA Company in New York.  Moving from there to Houston (Exxon), Fred next moved to Malaysia, then back to New York then…..you get the message….it was a life of constant moving, but they were never-the-less able to raise three wonderful children despite all the turmoil.</p>
+<br>
+<p>
+Retiring in 1990 and settling in Victoria, BC, they finally moved to the D.C. area.  Never the one to be idle, Fred soon dug out an old trunk full of artifacts from Egypt, which Joyce’s grandfather had brought with him to Canada.  Intrigued to learn more about Egypt and remembering some of his Latin and Greek from his schooldays, he was soon deep in research about those times. With almost nothing in written history about Cleopatra, guess on whom he decided to focus his efforts.  Eight years of research later, the first of his books was published and it was like no other written about this famous Queen.  The second is on its way and is also filled with many new discoveries and insights.  An avid golfer, Fred claims his home is at the Norbeck Country Club. 
+	
 </p>
+</div> -->
+
+ <div class="container">
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">About
+                        <strong>Fred Graham-Yooll</strong>
+                    </h2>
+                    <hr>
+                </div>
+                <div class="col-md-6">
+                	<%= image_tag("Fred.jpg", :size => '500x580') %>
+                </div>
+                <div class="col-md-6">
+                    <p>Fred was born in 1932 in the City of Edinburgh, Scotland.  Educated at Edinburgh Academy and Clifton Hall Prep Schools and later at Fettes College, he went on study at Nottingham University where he obtained a Bsc. in Agriculture.  After graduating he obtained his commission in the Royal Artillery.  Immigrating to Canada, Fred joined NW Nitro Chemicals and was transferred to the USA, but not before meeting his future wife, Joyce Briercliffe, in Winnipeg, Manitoba.  Soon after, he joined Imperial Oil in Toronto and was quickly moved back to join the USA Company in New York.  Moving from there to Houston (Exxon), Fred next moved to Malaysia, then back to New York then…..you get the message….it was a life of constant moving, but they were never-the-less able to raise three wonderful children despite all the turmoil.</p>
+					<br>
+					<p>
+					Retiring in 1990 and settling in Victoria, BC, they finally moved to the D.C. area.  Never the one to be idle, Fred soon dug out an old trunk full of artifacts from Egypt, which Joyce’s grandfather had brought with him to Canada.  Intrigued to learn more about Egypt and remembering some of his Latin and Greek from his schooldays, he was soon deep in research about those times. With almost nothing in written history about Cleopatra, guess on whom he decided to focus his efforts.  Eight years of research later, the first of his books was published and it was like no other written about this famous Queen.  The second is on its way and is also filled with many new discoveries and insights.  An avid golfer, Fred claims his home is at the Norbeck Country Club. 
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+
+     <!--    <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">Our
+                        <strong>Team</strong>
+                    </h2>
+                    <hr>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>John Smith
+                        <small>Job Title</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>John Smith
+                        <small>Job Title</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>John Smith
+                        <small>Job Title</small>
+                    </h3>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+ -->
+    </div>
+    <!-- /.container -->
 
 
