--- a/app/views/monologue/posts/show.html.erb
+++ b/app/views/monologue/posts/show.html.erb
@@ -8,8 +8,20 @@
 
 <article>
   <%= render partial: 'monologue/posts/post_header', locals: {post: @post }%>
-  <div class="content" data-monologue="content">
+  <!-- <div class="content" data-monologue="content">
     <%= raw @post.content %>
+  </div> -->
+  <div class="row">
+      <div class="box">
+          <div class="col-lg-12">
+              <hr>
+              <h2 class="intro-text text-center">Beautiful boxes
+                  <strong>to showcase your content</strong>
+              </h2>
+              <hr>
+              <p><%= raw @post.content %></p>
+          </div>
+      </div>
   </div>
 
 	<div class="tags" data-monologue="tags">
