blog posts styles updated

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,16 @@
-<footer class = 'footer'>
+<footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p>Copyright &copy; Your Website 2014</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+<!-- <footer class = 'footer'>
 	<nav>
 		<ul class = "nav navbar-nav navbar-center">
-			<li><%= link_to "Blog", main_app.monologue_path %></li>
-			<li><%= link_to "About", main_app.pages_about_path %></li>
-			<li><%= link_to "Contact", main_app.pages_contact_path %></li>
+			
 		</ul>
 	</nav>
-</footer>
+</footer> -->
