--- a/app/views/monologue/admin/posts/_pagination.html.erb
+++ b/app/views/monologue/admin/posts/_pagination.html.erb
@@ -7,3 +7,17 @@
     <%= link_to t(".newer_posts"), admin_posts_page_path(@page.to_i-1), class: "newer_posts" %>
   <% end %>
 </div>
+
+<!-- <div class="row">
+      <div class="box">
+          <div class="col-lg-12">
+              <% if @posts.total_pages > 1 && @posts.total_pages != @page.to_i %>
+			    <%= link_to t(".older_posts"), admin_posts_page_path(@page.to_i+1), class: "older_posts" %>
+			  <% end %>
+
+			  <% if @posts.total_pages > 1 && @page.to_i > 1 %>
+			    <%= link_to t(".newer_posts"), admin_posts_page_path(@page.to_i-1), class: "newer_posts" %>
+			  <% end %>
+          </div>
+      </div>
+  </div> -->
