--- a/app/views/monologue/posts/_post.html.erb
+++ b/app/views/monologue/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<section data-tags="<%= post.tags.map(&:name).join(' ') %>">
+<!-- <section data-tags="<%= post.tags.map(&:name).join(' ') %>">
   <%= render partial: 'monologue/posts/post_header', locals: {post: post} %>
 
   <div class="content" data-monologue="content">
@@ -9,4 +9,37 @@
     <%= render post.tags %>
   </div>
   <%= link_to t(".readmore"), post.full_url, class: "button" %>
+</section> -->
+
+<section data-tags="<%= post.tags.map(&:name).join(' ') %>">
+
+<div class="container">
+    <div class="row">
+        <div class="box">
+            <div class="col-lg-12">
+                <hr>
+                <h2 class="intro-text text-center">Freds Blog
+                    <strong>blog</strong>
+                </h2>
+                <hr>
+            </div>
+            <div class="col-lg-12 text-center">
+                <img class="img-responsive img-border img-full" src="slide-1.jpg" alt="">
+                <%= render partial: 'monologue/posts/post_header', locals: {post: post} %>
+
+                <div class="content" data-monologue="content">
+					<%= truncate_html(post.content, length: Monologue::Config.preview_size, omission: '...') %>
+				</div>
+                <div class="tags" data-monologue="tags">
+					  <%= render post.tags %>
+				</div>
+                  <%= link_to t(".readmore"), post.full_url, class: "button" %>
+
+                <!-- <a href="#" class="btn btn-default btn-lg">Read More</a> -->
+                <hr>
+            </div>
+        </div>
+    </div>
+</div>
 </section>
+
