--- a/app/views/monologue/posts/show.html.erb
+++ b/app/views/monologue/posts/show.html.erb
@@ -1,13 +1,8 @@
-<% content_for :title do %>
-  <%= @post.title %>
-<% end %>
 
-<% content_for :meta_description do %>
-  <%= truncate(strip_tags(@post.content), length: 155) %>
-<% end %>
+
+
 
 <article>
-  <%= render partial: 'monologue/posts/post_header', locals: {post: @post }%>
   <!-- <div class="content" data-monologue="content">
     <%= raw @post.content %>
   </div> -->
@@ -15,23 +10,35 @@
       <div class="box">
           <div class="col-lg-12">
               <hr>
-              <h2 class="intro-text text-center">Beautiful boxes
-                  <strong>to showcase your content</strong>
+              <%= render partial: 'monologue/posts/post_header', locals: {post: @post }%>
+
+              <h2 class="intro-text text-center">
+              <% content_for :title do %>
+                  <%= @post.title %>
+              <% end %>
               </h2>
+              <!-- <h3>
+                <% content_for :meta_description do %>
+                  <%= truncate(strip_tags(@post.content), length: 155) %>
+                <% end %>
+                  
+              </h3> -->
               <hr>
               <p><%= raw @post.content %></p>
+              <div class="tags" data-monologue="tags">
+                <%= render @post.tags %>
+              </div>
+
+              <%= render "monologue/posts/social_sharing" %>
           </div>
+          <div id="disqus_thread"></div>
+          <%= render 'layouts/monologue/application/disqus_embed' %>
+          <noscript>Please enable JavaScript to view the comments.</noscript>
       </div>
   </div>
 
-	<div class="tags" data-monologue="tags">
-    <%= render @post.tags %>
-  </div>
+	
 
-  <%= render "monologue/posts/social_sharing" %>
-
-  <div id="disqus_thread"></div>
-  <%= render 'layouts/monologue/application/disqus_embed' %>
-  <noscript>Please enable JavaScript to view the comments.</noscript>
+  
 </article>
 
