added new copy and new pics

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="brand">Fred Graham-Yooll</div>
-    <div class="address-bar">Derwood, MD | 240.731.4803</div>
+    <div class="address-bar">Maryland, USA | fgrahamy@hotmail.com</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
