--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -22,7 +22,7 @@ Retiring in 1990 and settling in Victoria, BC, they finally moved to the D.C. ar
                     <hr>
                 </div>
                 <div class="col-md-6">
-                	<%= image_tag("Fred.jpg", :size => '500x580') %>
+                	<%= image_tag("Fred.jpg", :width => '100%') %>
                 </div>
                 <div class="col-md-6">
                     <p>Fred was born in 1932 in the City of Edinburgh, Scotland.  Educated at Edinburgh Academy and Clifton Hall Prep Schools and later at Fettes College, he went on study at Nottingham University where he obtained a Bsc. in Agriculture.  After graduating he obtained his commission in the Royal Artillery.  Immigrating to Canada, Fred joined NW Nitro Chemicals and was transferred to the USA, but not before meeting his future wife, Joyce Briercliffe, in Winnipeg, Manitoba.  Soon after, he joined Imperial Oil in Toronto and was quickly moved back to join the USA Company in New York.  Moving from there to Houston (Exxon), Fred next moved to Malaysia, then back to New York then…..you get the message….it was a life of constant moving, but they were never-the-less able to raise three wonderful children despite all the turmoil.</p>
