--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,49 +7,49 @@
         <div class="row">
             <div class="box">
                 <div class="col-lg-12 text-center">
-                    <div id="carousel-example-generic" class="carousel slide">
+                    <!-- <div id="carousel-example-generic" class="carousel slide"> -->
                         <!-- Indicators -->
-                        <ol class="carousel-indicators hidden-xs">
+                        <!-- <ol class="carousel-indicators hidden-xs">
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                        </ol>
+                        </ol> -->
 
-                        <!-- Wrapper for slides -->
+                       <!--  Wrapper for slides
                         <div class="carousel-inner">
                             <div class="item active">
 			                    <%= image_tag("earth.jpg", class:"img-responsive img-full") %>
 
-                                <!-- <img class="img-responsive img-full" src="img/slide-1.jpg" alt=""> -->
+                                <img class="img-responsive img-full" src="img/slide-1.jpg" alt="">
                             </div>
                             <div class="item">
                             	<%= image_tag("watch.jpg", class:"img-responsive img-full") %>
-                                <!-- <img class="img-responsive img-full" src="img/slide-2.jpg" alt=""> -->
+                                <img class="img-responsive img-full" src="img/slide-2.jpg" alt="">
                             </div>
                             <div class="item">
                             	<%= image_tag("study.jpg", class:"img-responsive img-full") %>
 
-                                <!-- <img class="img-responsive img-full" src="img/slide-3.jpg" alt=""> -->
+                                <img class="img-responsive img-full" src="img/slide-3.jpg" alt="">
                             </div>
-                        </div>
+                        </div> -->
 
                         <!-- Controls -->
-                        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                        <!-- <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
                             <span class="icon-prev"></span>
                         </a>
                         <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
                             <span class="icon-next"></span>
                         </a>
-                    </div>
+                    </div> -->
                     <h2 class="brand-before">
-                        <small>Welcome to</small>
+                        Welcome to
                     </h2>
                     <h1 class="brand-name">Earth Watch Study Group</h1>
                     <hr class="tagline-divider">
                     <h2>
-                        <small>By
+                        By
                             <strong>Fred Graham-Yooll</strong>
-                        </small>
+                        
                     </h2>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                     <hr>
                     <!-- <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt=""> -->
                     <hr class="visible-xs">
-                    <p>The world is a n ever changing place. And as we all know, the present time faces terrific challenges that must be dealt with, or else the consequences can be, and I beleive will be, catastrophic.  Which is why I have set out to write and educate not only myself, but hopefuly others about the state of our world and the actions wee could take.</p>
+                    <p >The world is an ever changing place. And as we all know, the present time faces terrific challenges that must be dealt with, or else the consequences can be, and I beleive will be, catastrophic.  Which is why I have set out to write and educate not only myself, but hopefuly others about the state of our world and the actions wee could take.</p>
                     <p>With that being said, I also beleive the studying the history could lead us in the right direction and teach us something about ourselves today.  For many deacdes, I have been fascinated with the study of ancient Egypt. In particular the reign of Cleopatra and her escapades, intelligence, and explorations throught out her world.</p>
                 </div>
             </div>
@@ -79,8 +79,8 @@
                         <strong>Cleopatras Lost Treasure</strong> by Fred Graham-Yooll
                     </h2>
                     <hr>
-                    <p>I wrote a book (actually a couple) about Cleoatra and her genius-ness.</p>
-                    <p>You can find it on <%= link_to("Amazon", "https://www.amazon.com/Cleopatras-Lost-Treasure-Fred-Graham-Yooll-ebook/dp/B00U0N34ZU#nav-subnav", :target => "_blank")%>.</p>
+                    <p class="text-center">I wrote a book (actually a couple) about Cleoatra and her genius-ness.</p>
+                    <p class="text-center">You can find it on <%= link_to("Amazon", "https://www.amazon.com/Cleopatras-Lost-Treasure-Fred-Graham-Yooll-ebook/dp/B00U0N34ZU#nav-subnav", :target => "_blank")%>.</p>
                 </div>
             </div>
         </div>
