--- a/app/views/monologue/posts/_post.html.erb
+++ b/app/views/monologue/posts/_post.html.erb
@@ -18,7 +18,7 @@
         <div class="box">
             <div class="col-lg-12">
                 <hr>
-                <h2 class="intro-text text-center">Freds Blog
+                <h2 class="intro-text text-center">Freds
                     <strong>blog</strong>
                 </h2>
                 <hr>
